--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,18 @@ blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.5.2
 Flask-Login==0.6.2
+flask-marshmallow==0.15.0
 Flask-SQLAlchemy==3.0.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
+packaging==23.1
 psycopg2-binary==2.9.6
+PyJWT==2.7.0
 SQLAlchemy==2.0.17
 typing_extensions==4.7.0
 Werkzeug==2.3.6
